--- a/index.html
+++ b/index.html
@@ -101,25 +101,28 @@
                 <span class="url">youtube.com/#</span>
               </div>
             </a>
-            <a href="https://spotify.com">
-              <i class="fa-brands fa-spotify"></i>
+            <a href="https://gmail.com">
+              <i class="fa-brands "><svg xmlns="http://www.w3.org/2000/svg" width="256" height="193" viewBox="0 0 256 193"><path fill="#4285F4" d="M58.182 192.05V93.14L27.507 65.077L0 49.504v125.091c0 9.658 7.825 17.455 17.455 17.455h40.727Z"/><path fill="#34A853" d="M197.818 192.05h40.727c9.659 0 17.455-7.826 17.455-17.455V49.505l-31.156 17.837l-27.026 25.798v98.91Z"/><path fill="#EA4335" d="m58.182 93.14l-4.174-38.647l4.174-36.989L128 69.868l69.818-52.364l4.669 34.992l-4.669 40.644L128 145.504z"/><path fill="#FBBC04" d="M197.818 17.504V93.14L256 49.504V26.231c0-21.585-24.64-33.89-41.89-20.945l-16.292 12.218Z"/><path fill="#C5221F" d="m0 49.504l26.759 20.07L58.182 93.14V17.504L41.89 5.286C24.61-7.66 0 4.646 0 26.23v23.273Z"/></svg></i>
               <div class="label">
-                <span class="name">Spotify</span>
-                <span class="url">spotify.com</span>
+                <span class="name">Gmail</span>
+                <span class="url">gmail.com</span>
               </div>
             </a>
-            <a href="https://netflix.com">
-              <img src="https://iili.io/HMIU1g2.png" style="height: 24px; width: 24px;">
+            <a href="https://drive.google.com">
+              <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
+                <path fill="#1e88e5" d="M38.59,39c-0.535,0.93-0.298,1.68-1.195,2.197C36.498,41.715,35.465,42,34.39,42H13.61 c-1.074,0-2.106-0.285-3.004-0.802C9.708,40.681,9.945,39.93,9.41,39l7.67-9h13.84L38.59,39z"></path><path fill="#fbc02d" d="M27.463,6.999c1.073-0.002,2.104-0.716,3.001-0.198c0.897,0.519,1.66,1.27,2.197,2.201l10.39,17.996 c0.537,0.93,0.807,1.967,0.808,3.002c0.001,1.037-1.267,2.073-1.806,3.001l-11.127-3.005l-6.924-11.993L27.463,6.999z"></path><path fill="#e53935" d="M43.86,30c0,1.04-0.27,2.07-0.81,3l-3.67,6.35c-0.53,0.78-1.21,1.4-1.99,1.85L30.92,30H43.86z"></path><path fill="#4caf50" d="M5.947,33.001c-0.538-0.928-1.806-1.964-1.806-3c0.001-1.036,0.27-2.073,0.808-3.004l10.39-17.996 c0.537-0.93,1.3-1.682,2.196-2.2c0.897-0.519,1.929,0.195,3.002,0.197l3.459,11.009l-6.922,11.989L5.947,33.001z"></path><path fill="#1565c0" d="M17.08,30l-6.47,11.2c-0.78-0.45-1.46-1.07-1.99-1.85L4.95,33c-0.54-0.93-0.81-1.96-0.81-3H17.08z"></path><path fill="#2e7d32" d="M30.46,6.8L24,18L17.53,6.8c0.78-0.45,1.66-0.73,2.6-0.79L27.46,6C28.54,6,29.57,6.28,30.46,6.8z"></path>
+                </svg>
               <div class="label">
-                <span class="name">Netflix</span>
-                <span class="url">netflix.com</span>
+                <span class="name">Drive</span>
+                <span class="url">drive.google.com</span>
               </div>
             </a>
-            <a href="#">
-              <i class="fa-brands fa-xbox"></i>
+            <a href="https://www.indiahabitat.org/programmes">
+              <!-- <i class="fa-brands fa-xbox"></i> -->
+              <img src="https://www.indiahabitat.org/themes/ihc/img/ihclogo.png" width="24" height="24">
               <div class="label">
-                <span class="name">Xbox</span>
-                <span class="url">xbox.com</span>
+                <span class="name">India Habitat Centre/Programme</span>
+                <span class="url">indiahabitat.org/programmes</span>
               </div>
             </a>
           </div>
