--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               </div>
           </main></div>
             <div class='child'>  <button type="button" id="user-menu-button" style="margin-right: 10%; margin-top: 10%;">
-              <img src="dp.png" style="height: 100px; width: 100px; " alt="" />
+              <img src="dp.jpg" style="height: 100px; width: 100px; " alt="" />
             </button>
             <div class="social-buttons">
               <a href="https://www.instagram.com/kamalkashyapp" target="_blank" class="social-button social-button--instagram" aria-label="Instagram">
