--- a/copy.html
+++ b/copy.html
@@ -5,13 +5,13 @@
   <div id="main-wrapper" class="fancy-scrollbar">
     <div id="main">
       <div id="content">
-        <div id="links-container"  style="padding-left: 30%; padding-right: 30%;">
+        <div id="links-container"  style="padding-left: 20%; padding-right: 20%;">
           <a href="https://gmail.com">Gmail</a>
           <a href="https://unsplash.com">Unsplash</a>
           <a href="https://kamalkp27.000webhostapp.com">My site</a>
           <a href="https://beacons.ai/#">About</a>
         </div>
-      <div class="mycontainer" style="padding-left: 30%; padding-right: 30%; padding-top: 1%;">
+      <div class="mycontainer" style="padding-left: 20%; padding-right: 20%; padding-top: 1%;">
         <div id="header-container">
           <div class='parent'>
             <div class='child'><main>
@@ -22,7 +22,7 @@
               </div>
           </main></div>
             <div class='child'>  <button type="button" id="user-menu-button" style="margin-right: 10%; margin-top: 10%;">
-              <img src="dp.png" style="height: 100px; width: 100px; " alt="" />
+              <img src="dp.jpg" style="height: 100px; width: 100px; " alt="" />
             </button>
             <div class="social-buttons">
               <a href="https://www.instagram.com/kamalkashyapp" target="_blank" class="social-button social-button--instagram" aria-label="Instagram">
