--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a href="https://www.linkedin.com/in/kamalkashyapp/" target="_blank" class="social-button social-button--linkedin" aria-label="LinkedIn">
                 <i class="fab fa-linkedin-in"></i>
               </a>
-              <a href="https://snapchat.com/add/kamalkp2727" target="_blank" class="social-button social-button--snapchat" aria-label="Snapchat">
+              <a href="https://snapchat.com/add/kamalkashyappp" target="_blank" class="social-button social-button--snapchat" aria-label="Snapchat">
                 <i class="fab fa-snapchat-ghost"></i>
               </a>
               <a href="https://github.com/kamalkashyapp" target="_blank" class="social-button social-button--github" aria-label="GitHub">
