--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a href="https://github.com/kamalkashyapp" target="_blank" class="social-button social-button--github" aria-label="GitHub">
                 <i class="fab fa-github"></i>
               </a>
-              <a href="https://codepen.io/#" target="_blank" class="social-button social-button--codepen" aria-label="CodePen">
+              <a href="https://codepen.io/kamalkashyapp" target="_blank" class="social-button social-button--codepen" aria-label="CodePen">
                 <i class="fab fa-codepen"></i>
               </a>
             </div></div>
