--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <div id="main-wrapper" class="fancy-scrollbar">
     <div id="main">
       <div id="content">
-        <div id="links-container"  style="padding-left: 30%; padding-right: 30%;">
+        <div id="links-container"  style="padding-left: 20%; padding-right: 20%;">
           <a href="https://gmail.com">Gmail</a>
           <a href="https://unsplash.com">Unsplash</a>
           <a href="https://kamalkp27.000webhostapp.com">My site</a>
           <a href="https://beacons.ai/#">About</a>
         </div>
-      <div class="mycontainer" style="padding-left: 30%; padding-right: 30%; padding-top: 1%;">
+      <div class="mycontainer" style="padding-left: 20%; padding-right: 20%; padding-top: 1%;">
         <div id="header-container">
           <div class='parent'>
             <div class='child'><main>
@@ -37,13 +37,13 @@
               <a href="https://www.linkedin.com/in/kamalkashyapp/" target="_blank" class="social-button social-button--linkedin" aria-label="LinkedIn">
                 <i class="fab fa-linkedin-in"></i>
               </a>
-              <a href="https://snapchat.com/add/kamalkashyappp" target="_blank" class="social-button social-button--snapchat" aria-label="Snapchat">
+              <a href="#" target="_blank" class="social-button social-button--snapchat" aria-label="Snapchat">
                 <i class="fab fa-snapchat-ghost"></i>
               </a>
               <a href="https://github.com/kamalkashyapp" target="_blank" class="social-button social-button--github" aria-label="GitHub">
                 <i class="fab fa-github"></i>
               </a>
-              <a href="https://codepen.io/kamalkashyapp" target="_blank" class="social-button social-button--codepen" aria-label="CodePen">
+              <a href="https://codepen.io/#" target="_blank" class="social-button social-button--codepen" aria-label="CodePen">
                 <i class="fab fa-codepen"></i>
               </a>
             </div></div>
